# local_drakor

./: .gitignore  README.md  links.json  pyproject.toml
src/temp_drakor/: main.py
src/temp_drakor/static/: style.css
src/temp_drakor/templates/: base.html.jinja  test.html.jinja
